# devwatch

./: .gitignore  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  ipc.rs  lib.rs  provider.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  notifier.rs  poller.rs  server.rs  state.rs  store.rs
crates/providers/github/: Cargo.toml
crates/providers/github/src/: lib.rs
crates/providers/gitlab/: Cargo.toml
crates/providers/gitlab/src/: lib.rs
crates/tauri-app/: .gitignore  Cargo.toml  generate-icons.js  package-lock.json  package.json  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/src/: daemon.rs  main.rs
crates/tauri-app/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
crates/tauri-app/ui/src/: App.tsx  main.tsx  types.ts
crates/tauri-app/ui/src/components/: PrTable.tsx  StatusBar.tsx  ThemeToggle.tsx
crates/tauri-app/ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  switch.tsx  table.tsx  tooltip.tsx
crates/tauri-app/ui/src/hooks/: useDaemon.ts  useDemoData.ts  useNotifications.ts
crates/tauri-app/ui/src/lib/: utils.ts
crates/tauri-app/ui/src/pages/: Dashboard.tsx  PullRequests.tsx  Settings.tsx
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  config_editor.rs  launch.rs  main.rs  settings.rs  theme.rs  ui.rs
demo/: tui.tape
examples/: config.example.toml
