[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/providers/github",
    "crates/providers/gitlab",
    "crates/tui",
    "crates/tauri-app",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
async-trait        = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config             = "0.14"
anyhow             = "1"
tokio-util         = { version = "0.7",  features = ["codec"] }
