[package]
name    = "tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devwatch-tui"
path = "src/main.rs"

[dependencies]
devwatch-core = { path = "../core" }
tokio      = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

# Phase 2 — uncomment when implementing
# ratatui   = "0.29"
# crossterm = "0.27"
